--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -8,6 +8,6 @@
 
 <%= link_to 'タスク一覧に戻る', tasks_path %>
 
-<%= link_to 'このタスクを編集する', edit_message_path(@message) %>
+<%= link_to 'このタスクを編集する', edit_task_path(@task) %>
 
-<%= link_to 'このメッセージを削除する', @task, method: :delete, data: { confirm: '本当に削除してよろしいですか？' } %>
+<%= link_to 'このタスクを削除する', @task, method: :delete, data: { confirm: '本当に削除してよろしいですか？' } %>
